# cachekit-rs

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  .release-please-manifest.json  .secrets.baseline  CLAUDE.md  Cargo.toml  Makefile  README.md  deny.toml  release-please-config.json  renovate.json  reply.md
.github/: actionlint.yaml
.github/workflows/: ci.yml  pr-title-lint.yml  release.yml
crates/cachekit/: CHANGELOG.md  Cargo.toml  clippy.toml
crates/cachekit-macros/: CHANGELOG.md  Cargo.toml  README.md
crates/cachekit-macros/src/: lib.rs
crates/cachekit/src/: client.rs  config.rs  encryption.rs  error.rs  flight.rs  intents.rs  interop.rs  key.rs  lib.rs  metrics.rs  reliability.rs  session.rs  url_validator.rs
crates/cachekit/src/backend/: cachekitio.rs  cachekitio_lock.rs  cachekitio_ttl.rs  file.rs  memcached.rs  mod.rs  redis.rs  saas_wire.rs  workers.rs
crates/cachekit/src/l1/: mod.rs
crates/cachekit/src/serializer/: mod.rs
crates/cachekit/tests/: aad_tests.rs  backend_trait_tests.rs  cachekitio_tests.rs  client_tests.rs  config_tests.rs  encryption_interop_tests.rs  encryption_tests.rs  error_tests.rs  file_tests.rs  intent_tests.rs  interop_vector_tests.rs  key_tests.rs  l1_tests.rs  macro_tests.rs  memcached_tests.rs  redis_tests.rs  reliability_tests.rs  serializer_tests.rs  swr_tests.rs
crates/cachekit/tests/common/: mod.rs
crates/cachekit/tests/vectors/: interop-mode.json
