[package]
name = "cachekit-macros"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Proc-macro decorators for the cachekit-rs SDK (#[cachekit] attribute macro)."
readme = "README.md"
homepage = "https://cachekit.io"
keywords = ["cache", "proc-macro", "cachekit"]
categories = ["caching"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[lints]
workspace = true
