[package]
name = "cachekit-rs"
version = "0.4.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Production-ready caching for Rust. Supports cachekit.io SaaS, Redis, Memcached, local File, and Cloudflare Workers."
readme = "../../README.md"
homepage = "https://cachekit.io"
keywords = ["cache", "redis", "encryption", "moka", "cloudflare-workers"]
categories = ["caching", "web-programming", "cryptography"]

[lib]
name = "cachekit"

[features]
default = ["cachekitio", "encryption", "l1"]
cachekitio = ["dep:reqwest", "dep:serde_json"]
redis = ["dep:fred"]
# Memcached backend (native only). tokio/sync provides the Mutex serializing
# access to the single async-memcached connection.
memcached = ["dep:async-memcached", "dep:tokio", "tokio/sync"]
# Local filesystem backend (native only). tokio/rt provides spawn_blocking so
# disk I/O never blocks the async executor; libc provides O_NOFOLLOW on unix.
file = ["dep:tokio", "tokio/rt", "dep:libc"]
workers = ["dep:worker", "dep:js-sys", "dep:getrandom", "dep:serde_json"]
# cachekit-core 0.2 folds aes-gcm into the `encryption` feature automatically on wasm32.
# No separate `cachekit-core/wasm` activation needed.
encryption = ["cachekit-core/encryption"]
l1 = ["dep:moka"]
macros = ["dep:cachekit-macros"]
# Opt into ?Send / Rc on native targets (for tokio::task::LocalSet, single-threaded
# runtimes, etc.). Same code paths that wasm32 already uses.
unsync = []

[dependencies]
cachekit-core = { version = "0.3", features = ["messagepack"] }
serde = { version = "1", features = ["derive"] }
rmp-serde = "1"
thiserror = "2.0"
async-trait = "0.1"
blake2 = "0.10"
bytes = "1"
zeroize = { version = "1", features = ["derive"] }
urlencoding = "2"
hex = "0.4"
url = "2"
uuid = { version = "1", features = ["v4", "js"] }

# Optional: HTTP backend (native)
reqwest = { version = "0.12", optional = true, default-features = false, features = ["rustls-tls", "json"] }
serde_json = { version = "1", optional = true }

# Optional: Redis backend. `i-scripts` exposes EVAL for the atomic
# compare-and-delete lock release (LockableBackend).
fred = { version = "9", optional = true, features = ["i-scripts"] }

# Optional: Memcached backend (Shopify's tokio-native ASCII/meta client).
async-memcached = { version = "0.6", optional = true }

# Optional: shared by the memcached (sync) and file (rt) backends. Feature
# lists live on the `memcached`/`file` feature declarations above.
tokio = { version = "1", optional = true, default-features = false }

# Optional: L1 in-process cache
moka = { version = "0.12", optional = true, features = ["sync"] }

# Optional: Cloudflare Workers
worker = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
getrandom = { version = "0.2", optional = true, features = ["js"] }

# Optional: proc-macro decorator
cachekit-macros = { version = "0.4.0", path = "../cachekit-macros", optional = true }

# Optional (file backend, unix only): O_NOFOLLOW open flag — std has no
# portable spelling for it and the value differs per OS.
[target.'cfg(unix)'.dependencies]
libc = { version = "0.2", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
serial_test = "3"
tempfile = "3"

[lints]
workspace = true
